# uefi

./: .gitignore  Cargo.toml
src/: array.rs  boot_services.rs  boot_services_ex.rs  common.rs  configuration_table.rs  dynamic_array.rs  lib.rs  runtime_services.rs  system_table.rs  tools.rs
src/interface/: file.rs  mod.rs  simple_file_system.rs  simple_input.rs  simple_text_output.rs
src/interfaces/: file.rs  mod.rs  simple_file_system.rs  simple_input.rs  simple_text_output.rs
src/system_table/: boot_services.rs  mod.rs  runtime_services.rs
