[package]
name = "uefi"
version = "0.0.1"
authors = ["Vladislav Melnik <vlad9486@gmail.com>"]

[lib]
name = "uefi"
crate-type = ["rlib"]

[dependencies]
bitflags = "*"

# The development profile, used for `cargo build`.
# [profile.dev]
# panic = "abort"

# The release profile, used for `cargo build --release`.
# [profile.release]
# panic = "abort"
